initial commit for play framework

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,18 @@
 *.db
 *.pyc
 .DS_Store
+turbobi/logs
+turbobi/project/project
+turbobi/project/target
+turbobi/target
+turbobi/tmp
+.history
+turbobi/dist
+/.idea
+/*.iml
+/out
+/.idea_modules
+/.classpath
+/.project
+/RUNNING_PID
+/.settings
