--- a/turbobi/conf/application.conf
+++ b/turbobi/conf/application.conf
@@ -1,52 +1,27 @@
-# This is the main configuration file for the application.
-# ~~~~~
+# Configuration
+
+application.name=computer-database
 
 # Secret key
 # ~~~~~
 # The secret key is used to secure cryptographics functions.
 # If you deploy your application to several instances be sure to use the same key!
-application.secret="9OgkAhPbLGI7au5_Qr@okWV4JAtsg9c`wvGpt=Jt`]X<AhXCYN9=uLd3ZJZ`ZC@W"
-
-# The application languages
-# ~~~~~
-application.langs="en"
-
-# Global object class
-# ~~~~~
-# Define the Global object class for this application.
-# Default to Global in the root package.
-# application.global=Global
-
-# Router
-# ~~~~~
-# Define the Router object to use for this application.
-# This router will be looked up first when the application is starting up,
-# so make sure this is the entry point.
-# Furthermore, it's assumed your route file is named properly.
-# So for an application router like `my.application.Router`,
-# you may need to define a router file `conf/my.application.routes`.
-# Default to Routes in the root package (and conf/routes)
-# application.router=my.application.Routes
+application.secret="E27D^[_<Lpt0vjad]de;3;tx3gpRmG4ByofnahOIo9gbsMWut1w3xg[>9W"
 
 # Database configuration
-# ~~~~~
+# ~~~~~ 
 # You can declare as many datasources as you want.
 # By convention, the default datasource is named `default`
-#
-# db.default.driver=org.h2.Driver
-# db.default.url="jdbc:h2:mem:play"
-# db.default.user=sa
-# db.default.password=""
+db.default.driver=org.h2.Driver
+db.default.url="jdbc:h2:mem:play"
 
-# Evolutions
+# Assets configuration
 # ~~~~~
-# You can disable evolutions if needed
-# evolutionplugin=disabled
+"assets.cache./public/stylesheets/bootstrap.min.css"="max-age=3600"
 
 # Logger
 # ~~~~~
-# You can also configure logback (http://logback.qos.ch/),
-# by providing an application-logger.xml file in the conf directory.
+# You can also configure logback (http://logback.qos.ch/), by providing a logger.xml file in the conf directory .
 
 # Root logger:
 logger.root=ERROR
@@ -56,4 +31,8 @@ logger.play=INFO
 
 # Logger provided to your application:
 logger.application=DEBUG
+
+
+
+
 
